--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
 		</p>
 		    
 		<p class="text-justify" style="font-size: 16px;">
-		<b>VLM image understanding </b>Second, we will explore more deeply on how VLM understand these images and whether can VLM understand these humorours images correctly. Having a logical understanding of these images will help VLM reasonint abilities. 
+		<b>VLM image understanding </b>Second, we will explore more deeply on how VLM understand these images and whether can VLM understand these humorours images correctly. Having a logical understanding of these images will help VLM abilities. 
 		</p>
 
             </div>
