--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <ul class="list-inline">
                     <li>
                         <a href="https://derekhu.com/" style="font-size: 16px;">
-                            <b> Zhe Hu </b>
+                            <b> Zhe Hu * </b>
                         </a>
                         <sup>1</sup>
                     </li>
                     <li>
                         <a href="https://Tuo-Liang.github.io" style="font-size: 16px;">
-                            <b> Tuo Liang </b>
+                            <b> Tuo Liang * </b>
                         </a>
                         <sup>2</sup>
                     </li>
@@ -115,7 +115,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <p>This paper has been accepted at NeurIPS 2024 as an oral presentation.</p>
+      <a style="font-size: 16px;"><b>This paper has been accepted at NeurIPS 2024 as an oral presentation.</b></a>
     </div>
   </div>
 </div>
@@ -159,41 +159,48 @@
         </div>
 	
 
-	    <div class="container" style="width:100%; ">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
+<div class="container" style="width:100%;">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
-            <!-- carousel images -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="./files/2.png" alt="Image 1" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
-                </div>
-
-                <div class="item">
-                    <img src="./files/3.png" alt="Image 2" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
-                </div>
-
-                <div class="item">
-                    <img src="./files/1.png" alt="Image 3" style="display: block; margin: 0 auto; width: 100%; height: auto;">
-                </div>
+        <!-- carousel images -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="./files/2.png" alt="Image 1" style="display: block; margin: 0 auto; width: 100%; height: auto;">
             </div>
 
-            <!-- button -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="item">
+                <img src="./files/3.png" alt="Image 2" style="display: block; margin: 0 auto; width: 100%; height: auto;">
+            </div>
+
+            <div class="item">
+                <img src="./files/1.png" alt="Image 3" style="display: block; margin: 0 auto; width: 100%; height: auto;">
+            </div>
         </div>
     </div>
+</div>
+
+<style>
+    .carousel-inner img {
+        box-shadow: none;
+    }
+
+    .carousel {
+        box-shadow: none;
+    }
+
+    /* Hide carousel controls */
+    .carousel-control {
+        display: none;
+    }
+</style>
+
+
 
     <!-- 引入jQuery和Bootstrap的JavaScript文件 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
