--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div class="row">
             <h1 class="col-md-20 text-center">
                 <br><br>
-                <b>Cracking the Code of Juxtaposition</b>: Can AI Models Understand the Humorous Contradictions <br>
+                <b>Cracking the Code of Juxtaposition: </b> 
+		    <br>
+		    Can AI Models Understand the Humorous Contradictions
                 <!-- <small>
                     Submitted (Spotlight)
                 </small> -->
