--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
         </div>
 
 	
-<div class="row">
+<div class="row" style="width:100%; background-color: #f5f5f5;">
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
@@ -249,7 +249,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 		</p>
             </div>
 		
-		<div class="row">
+<div class="row" style="width:100%; background-color: #f5f5f5;">
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
