--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@ Our results show that even state-of-the-art models still lag behind human perfor
         </div>
 
 	
-<div class="row" style="width:100%; background-color: #f5f5f5;">
-            <div class="col-md-12 col-md-offset-0 text-center">
+<div class="row" >
+            <div class="col-md-12 col-md-offset-0 text-center" style="width:100%; background-color: #f5f5f5;">
                 <br><br>
                 <h2>
                     <b>YESBUT Dataset Overview</b>
@@ -247,10 +247,10 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 <p class="text-justify" style="font-size: 16px;">
                     <b>Explanation of Dataset.</b>Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes: (1) a two-panel comic that forms a narrative with inherent contradictions; (2) a literal description of the comic narratives; (3) an explanation that illustrates the contradiction within the narrative; (4) the deep philosophy or underlying message the comic aims to convey; and (5) a title of the comic. Based on these components, we construct various tasks for comic understanding. 
 		</p>
-            </div>
+        </div>
 		
-<div class="row" style="width:100%; background-color: #f5f5f5;">
-            <div class="col-md-12 col-md-offset-0 text-center">
+<div class="row">
+        <div class="col-md-12 col-md-offset-0 text-center" style="width:100%; background-color: #f5f5f5;">
                 <br><br>
                 <h2>
                     <b>Data Construction Overview</b>
