--- a/index.html
+++ b/index.html
@@ -233,7 +233,19 @@ Our results show that even state-of-the-art models still lag behind human perfor
             </div>
         </div>
 
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YESBUT Dataset Overview</title>
+    <style>
+        body {
+            background-color: #d3d3d3; /* 外部背景变为淡灰色 */
+        }
+    </style>
+</head>
 	
+<body>
 <div class="row" >
             <div class="col-md-12 col-md-offset-0 text-center" style="width:100%; background-color: #f5f5f5;">
                 <br><br>
@@ -245,12 +257,25 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 <img src="./files/intro_example.png" class="img-responsive" alt="overview"><br>
 		    -->
                 <p class="text-justify" style="font-size: 16px;">
-                    <b>Explanation of Dataset.</b>Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes: (1) a two-panel comic that forms a narrative with inherent contradictions; (2) a literal description of the comic narratives; (3) an explanation that illustrates the contradiction within the narrative; (4) the deep philosophy or underlying message the comic aims to convey; and (5) a title of the comic. Based on these components, we construct various tasks for comic understanding. 
+                    <b>Explanation of Dataset.</b>Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes: 
+			<br>
+			(1) a two-panel comic that forms a narrative with inherent contradictions; 
+			<br>
+			(2) a literal description of the comic narratives; 
+						<br>
+			(3) an explanation that illustrates the contradiction within the narrative; 
+						<br>
+			(4) the deep philosophy or underlying message the comic aims to convey; 
+			(5) a title of the comic. 
+						<br>
+			Based on these components, we construct various tasks for comic understanding. 
 		</p>
         </div>
-		
+</div>
+</body>
+
 <div class="row">
-        <div class="col-md-12 col-md-offset-0 text-center" style="width:100%; background-color: #f5f5f5;">
+        <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
                     <b>Data Construction Overview</b>
