--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@ Our results show that even state-of-the-art models still lag behind human perfor
 
 
 	
-<body>
-<div class="row" >
+
+<div class="row" style="width:100%; background-color: #f5f5f5;">
             <div class="col-md-12 col-md-offset-0 text-center" style="width:100%; background-color: #f5f5f5;">
                 <br><br>
                 <h2>
@@ -263,12 +263,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 		</p>
         </div>
 </div>
-</body>
-    <style>
-        body {
-            background-color: #d3d3d3; /* 外部背景变为淡灰色 */
-        }
-    </style>
+
 
 <div class="row">
         <div class="col-md-12 col-md-offset-0 text-center">
