--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ Our results show that even state-of-the-art models still lag behind human perfor
 
 	
 
-<div class="row" style="width:100%; background-color: #f5f5f5;">
-                <div style="background-color: #f5f5f5; padding: 20px; width: 80%; margin: 0 auto;">
+<div class="row" style="width:200%; background-color: #f5f5f5;">
+        <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
                     <b>YESBUT Dataset Overview</b>
