--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 	
 <body>
 <div class="part1">
-        <div class="col-md-12 col-md-offset-0 text-center">
+        <div class="content-wrapper text-center">
                 <br><br>
                 <h2>
                     <b>YESBUT Dataset Overview</b>
