--- a/index.html
+++ b/index.html
@@ -1,31 +1,4 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YESBUT Dataset Overview</title>
-    <style>
-        /* 设置body的默认背景 */
-        body {
-            background-color: white; /* 默认页面背景为白色 */
-        }
-
-        /* 定义中间部分的背景颜色 */
-        .part1 {
-            background-color: #d3d3d3; /* 淡灰色 */
-            padding: 40px 0; /* 设置上下的间距 */
-            width: 100%; /* 占据整个宽度 */
-        }
-
-        /* 设置中间内容的样式 */
-        .content-wrapper {
-            width: 80%; /* 宽度为80% */
-            margin: 0 auto; /* 居中 */
-            background-color: #f5f5f5; /* 内部背景色 */
-            padding: 20px;
-        }
-    </style>
-</head>
-
 <!-- saved from url=(0040)https://yuyin1.github.io/YESBUT_Homepage/ -->
 <html><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
@@ -41,10 +14,6 @@
     <link rel="stylesheet" href="./YESBUT_files/font-awesome.min.css">
     <link rel="stylesheet" href="./YESBUT_files/codemirror.min.css">
     <link rel="stylesheet" href="./YESBUT_files/app.css">
-
-
-
-
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1087.0" data-gr-ext-installed="">
@@ -263,9 +232,8 @@ Our results show that even state-of-the-art models still lag behind human perfor
 
 
 	
-<body>
-<div class="part1">
-        <div class="content-wrapper text-center">
+<div class="row">
+            <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
                     <b>YESBUT Dataset Overview</b>
@@ -290,7 +258,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 		</p>
         </div>
 </div>
-</body>
+
 
 <div class="row">
         <div class="col-md-12 col-md-offset-0 text-center">
