--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 			(3) an explanation that illustrates the contradiction within the narrative; 
 						<br>
 			(4) the deep philosophy or underlying message the comic aims to convey; 
+			<br>
 			(5) a title of the comic. 
 						<br>
 			Based on these components, we construct various tasks for comic understanding. 
@@ -274,7 +275,13 @@ Our results show that even state-of-the-art models still lag behind human perfor
                     <b>Tasks </b>
                 </h2>
 		<hr style="margin-top:0px">
-                	<img src="./files/tasks.jpg" class="img-responsive" alt="overview"><br>
+                	<img src="./files/tasks2.jpg" class="img-responsive" alt="overview"><br>
+		    <style>
+			    .responsive-image {
+			        width: 70%;
+			        height: auto; 
+			    }
+			</style>
 		    <br>
 		    <br>
                     <b>Do Large Models Understand Humor in Juxtaposition? </b> We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
@@ -286,8 +293,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 <h2>
                     <b>Main Results</b>
                 </h2>
-		<p class="text-justify" style="font-size: 16px;">
-			
+		<p class="text-justify" style="font-size: 16px;">	
 		</p>
 
 	<\div>
@@ -302,17 +308,21 @@ Our results show that even state-of-the-art models still lag behind human perfor
 		    <hr style="margin-top:0px">
 		<p class="text-justify" style="font-size: 16px;">
 		    <b>Generative task </b>In the future, we intend to explore more deeply how AI can creatively engage with content. This includes generating pivotal turning points from one perspective and creating counterpoints to given scenarios, like generating a "But" image by given "Yes". The following is a simple example of it.
-
 		</p>
-                <hr style="margin-top:0px">
                 <img src="./files/4.jpg" style="width: 60%; height: 60%;" ><br>
 		<img src="./files/5.jpg" style="width: 40%; height: 60%;" ><br>
 		</p>
 		    
 		<p class="text-justify" style="font-size: 16px;">
-		<b>VLM image understanding </b>Second, we will explore more deeply on how VLM understand these images and whether can VLM understand these humorours images correctly. Having a logical understanding of these images will help VLM abilities. 
+		<b>VLM image understanding </b>We will explore more deeply on how VLM understand these images and whether can VLM understand these humorours images correctly. Having a logical understanding of these images will help VLM abilities. 
 		</p>
-
+		<hr style="margin-top:0px">
+		<p class="text-justify" style="font-size: 16px;">
+		<b>Evaluation </b> As a benchmark, this dataset can be used to evaluate the reasoning ability, comic understanding and humor understanding ability of a Vision Language Model. The following result is the how we evaluate the humor understanding ability of VLMs in our paper.
+		</p>
+		<hr style="margin-top:0px">
+		<img src="./files/evaluation2.jpg" style="width: 40%; height: 60%;" ><br>
+		    
             </div>
 
 		<div class="row">
