--- a/index.html
+++ b/index.html
@@ -275,13 +275,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
                     <b>Tasks </b>
                 </h2>
 		<hr style="margin-top:0px">
-                	<img src="./files/tasks2.jpg" class="img-responsive" alt="overview"><br>
-		    <style>
-			    .responsive-image {
-			        width: 70%;
-			        height: auto; 
-			    }
-			</style>
+                	<img src="./files/tasks2.jpg" style="width: 70%; height: 70%;><br>
 		    <br>
 		    <br>
                     <b>Do Large Models Understand Humor in Juxtaposition? </b> We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
