--- a/index.html
+++ b/index.html
@@ -220,10 +220,24 @@
 		    
 		    
                 <hr style="margin-top:0px">
-                <p class="text-justify" style="font-family: 'Arial', sans-serif;">
+                <p class="text-justify" style="font-family: 'Times New Roman', serif;">
 
-                    Recent advancements in large multimodal language models have demonstrated remarkable proficiency across a wide range of s. Yet, these models still struggle with understanding the nuances of human humor through juxtaposition, particularly when it involves nonlinear narratives that underpin many jokes and humor cues. This paper investigates this challenge by focusing on comics with contradictory narratives, where each comic consists of two panels that create a humorous contradiction. We introduce the YESBUT benchmark, which comprises s of varying difficulty aimed at assessing AI’s capabilities in recognizing and interpreting these comics, ranging from literal content comprehension to deep narrative reasoning. Through extensive experimentation and analysis of recent commercial or open-sourced large (vision) language models, we assess their capability to comprehend the complex interplay of the narrative humor inherent in these comics.
-Our results show that even state-of-the-art models still lag behind human performance on this . Our findings offer insights into the current limitations and potential improvements for AI in understanding human creative expressions.
+Recent advancements in large multimodal language models have demonstrated
+remarkable proficiency across a wide range of tasks. Yet, these models still
+struggle with understanding the nuances of human humor through juxtaposition,
+particularly when it involves nonlinear narratives that underpin many jokes and
+humor cues. This paper investigates this challenge by focusing on comics with
+contradictory narratives, where each comic consists of two panels that create a
+humorous contradiction. We introduce the YESBUT benchmark, which comprises
+tasks of varying difficulty aimed at assessing AI’s capabilities in recognizing
+and interpreting these comics, ranging from literal content comprehension to
+deep narrative reasoning. Through extensive experimentation and analysis of
+recent commercial or open-sourced large (vision) language models, we assess their
+capability to comprehend the complex interplay of the narrative humor inherent in
+these comics. Our results show that even state-of-the-art models still lag behind
+human performance on this task. Our findings offer insights into the current
+limitations and potential improvements for AI in understanding human creative
+expressions.
                 </p>
             </div>
         </div>
