--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@ expressions.
 		<br>
 		<br>
 		<p class="text-justify" style="font-size: 16px;">
-		<b>VLM image understanding: </b>We will explore more deeply on how VLM understand these images and whether can VLM understand these humorours images correctly. Having a logical understanding of these images will help VLM abilities. 
+		<b>VLM image understanding: </b>We will explore more deeply on how VLM understand these images and how to improve VLM's understanding ability of these humorours images. Having a logical understanding of these images will help VLM abilities. 
 		</p>
+		    <img src="./files/understand.jpg" style="width: 80%; height: 80%;" ><br>
 		<br>
 		<br>
 		<p class="text-justify" style="font-size: 16px;">
