--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 		    
                 <hr style="margin-top:0px">
                 <p class="text-justify" style="font-family: 'Palatino', serif;">
-
+<b>
 Recent advancements in large multimodal language models have demonstrated
 remarkable proficiency across a wide range of tasks. Yet, these models still
 struggle with understanding the nuances of human humor through juxtaposition,
@@ -244,7 +244,7 @@ capability to comprehend the complex interplay of the narrative humor inherent i
 these comics. Our results show that even state-of-the-art models still lag behind
 human performance on this task. Our findings offer insights into the current
 limitations and potential improvements for AI in understanding human creative
-expressions.
+expressions. </b>
 
                 </p>
             </div>
@@ -261,8 +261,9 @@ expressions.
         </h2>
         <hr style="margin-top:0px">
         <p class="text-center" style="font-size: 16px; text-align: center;">
-            <b>Explanation of Dataset.</b> Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes:
-            <br>
+            <b>Explanation of Dataset.</b>
+		<br>
+	Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes:
             (1) a two-panel comic that forms a narrative with inherent contradictions;
             <br>
             (2) a literal description of the comic narratives;
@@ -335,13 +336,13 @@ expressions.
 		<br>
 		<br>
 		<p class="text-justify" style="font-size: 16px;">
-		<b>VLM image understanding: </b>We will explore more deeply on how VLM understand these images and how to improve VLM's understanding ability of these humorours images. Having a logical understanding of these images will help VLM abilities. 
+		<b>VLM image understanding: </b>VLM Image Understanding: We will explore in more depth how VLM understands these images and how to improve VLM’s ability to understand these humorous images. We can address the hallucinations in the samples by improving the model’s reasoning ability and improve VLM’s understanding of the deep semantics of the images.
 		</p>
 		    <img src="./files/understand.jpg" style="width: 80%; height: 80%;" ><br>
 		<br>
 		<br>
 		<p class="text-justify" style="font-size: 16px;">
-		<b>Evaluation </b> As a benchmark, this dataset can be used to evaluate the reasoning ability, comic understanding and humor understanding ability of a Vision Language Model. The following result is the how we evaluate the humor understanding ability of VLMs in our paper.
+		<b>Evaluation: </b> As a benchmark, this dataset can be used to evaluate the reasoning ability, comic understanding and humor understanding ability of a Vision Language Model. The following result is the how we evaluate the humor understanding ability of VLMs in our paper.
 		</p>
 		<img src="./files/evaluation2.jpg" style="width: 80%; height: 80%;" ><br>
 		    
