--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@ expressions. </b>
             <b>Explanation of Dataset.</b>
 		<br>
 	Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes:
+		<br>
             (1) a two-panel comic that forms a narrative with inherent contradictions;
             <br>
             (2) a literal description of the comic narratives;
@@ -308,7 +309,7 @@ expressions. </b>
 		</p>
             </div>
 
-	<div class="col-md-12 col-md-offset-0 text-center">
+	<!--<div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
                     <b>Main Results</b>
@@ -317,7 +318,7 @@ expressions. </b>
 		<p class="text-justify" style="font-size: 16px;">	
 		</p>
 
-	</div>
+	</div> -->
 
 	
 			
@@ -395,13 +396,14 @@ expressions. </b>
                                             <div class="CodeMirror-cursors">
                                                 <div class="CodeMirror-cursor" style="left: 4px; top: 0px; height: 17.1406px;">&nbsp;</div>
                                             </div>
-                                            <div class="CodeMirror-code" style="">
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@article{2024cracking,</span></pre>
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  journal={arXiv preprint arXiv:2405.19088},</span></pre>
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  year={2024}</span></pre>
-                                            </div>
+                                           <div class="CodeMirror-code" style="background-color: #f9f9f9; border: 1px solid #ccc; border-radius: 8px; padding: 15px; font-family: 'Courier New', Courier, monospace; font-size: 14px; line-height: 1.6; white-space: pre-wrap; overflow-x: auto;">
+					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">@article{2024cracking,</span></pre>
+					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
+					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
+					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   journal={arXiv preprint arXiv:2405.19088},</span></pre>
+					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   year={2024}</span></pre>
+					</div>
+
                                         </div>
                                     </div>
                                 </div>
