--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                     </li>
                     <br>
                     <a></a><br>
-			        <li>
+			<li>
                         <sup>1</sup>
                         <a style="font-size: 16px;">
                             The Hong Kong Polytechnic University
                         </a>
                         </li>
-			        <li>
+			<li>
                         <sup>2</sup>
                         <a style="font-size: 16px;">
                             Case Western Reserve University 
@@ -116,6 +116,15 @@
 <!-- 			<a href="https://arxiv.org/html/2405.19088v1" target="blank"><span style="text-decoration:underline;font-size:20px">arXiv:2206.07255</span></a> -->
 		</div>
 		</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <a style="font-size: 16px;"><b>∗ These authors contribute equally.</b></a>
+    </div>
+  </div>
+</div>
+
 
 <div class="container">
   <div class="row">
@@ -396,13 +405,14 @@ expressions. </b>
                                             <div class="CodeMirror-cursors">
                                                 <div class="CodeMirror-cursor" style="left: 4px; top: 0px; height: 17.1406px;">&nbsp;</div>
                                             </div>
-                                           <div class="CodeMirror-code" style="background-color: #f9f9f9; border: 1px solid #ccc; border-radius: 8px; padding: 15px; font-family: 'Courier New', Courier, monospace; font-size: 14px; line-height: 1.6; white-space: pre-wrap; overflow-x: auto;">
-					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">@article{2024cracking,</span></pre>
-					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
-					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
-					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   journal={arXiv preprint arXiv:2405.19088},</span></pre>
-					    <pre class="CodeMirror-line" style="margin: 0;"><span style="padding-right: 0.1px;">   year={2024}</span></pre>
-					</div>
+					<p>If you find our work helpful, please consider cite us:</p>
+                         		<div class="CodeMirror-code" style="">
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@article{2024cracking,</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  journal={arXiv preprint arXiv:2405.19088},</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  year={2024}</span></pre>
+                                            </div>
 
                                         </div>
                                     </div>
