--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ expressions. </b>
                                                 <div class="CodeMirror-cursor" style="left: 4px; top: 0px; height: 17.1406px;">&nbsp;</div>
                                             </div>
 					<p>If you find our work helpful, please consider cite us:</p>
-                         		<div class="CodeMirror-code" style="">
+                         		<div class="CodeMirror-code" style="width:100%; background-color: #d3d3d3;">
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@article{2024cracking,</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
