--- a/index.html
+++ b/index.html
@@ -117,28 +117,26 @@
 		</div>
 		</div>
 
-<br>	  
 	    
-<div class="container">
-  <div class="row">
+
+<div class="row">
     <div class="col-md-12 text-center">
       <a style="font-size: 16px;"><b>∗ These authors contribute equally.</b></a>
     </div>
   </div>
-</div>
 
+<br>
 
-<div class="container">
-  <div class="row">
+<div class="row">
     <div class="col-md-12 text-center">
-      <a style="font-size: 16px;"><b>**This paper has been accepted at NeurIPS 2024 as an oral presentation.**</b></a>
+      <a style="font-size: 16px;"><b>This paper has been accepted at NeurIPS 2024 as an oral presentation.</b></a>
     </div>
   </div>
 </div>
 
 
 <div class="row">
-        <div class="row">
+	<div class="row">
             <div class="col-md-4 col-md-offset-4 text-center">
                 <ul class="nav nav-pills nav-justified">
                     <!--<li>
