--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 <div class="container">
 	<div class="row">
 	    <div class="col-md-12 text-center">
-	      <a style="font-size: 16px;"><b>This paper has been accepted at NeurIPS 2024 as an oral presentation.</b></a>
+	      <a style="font-size: 16px;"><b>**This paper has been accepted at NeurIPS 2024 as an oral presentation.** </b></a>
 	    </div>
 	  </div>
 	</div>
-  </div>
+
 
 <div class="row">
 	<div class="row">
