--- a/index.html
+++ b/index.html
@@ -92,15 +92,27 @@
                     <a></a><br>
 			<li>
                         <sup>1</sup>
-                        <a style="font-size: 16px;">
+                        <p style="font-size: 16px;">
                             The Hong Kong Polytechnic University
-                        </a>
+                        </p>
                         </li>
 			<li>
                         <sup>2</sup>
-                        <a style="font-size: 16px;">
+                        <p style="font-size: 16px;">
                             Case Western Reserve University 
-                        </a>
+                        </p>
+			</li>
+			<li>
+                        <sup>2</sup>
+                        <p style="font-size: 16px;">
+                            ∗ These authors contribute equally.
+                        </p>
+			</li>
+			<li>
+                        <sup>2</sup>
+                        <p style="font-size: 16px;">
+                            <b>NeuraIPS Oral 2024</b>.
+                        </p>
 			</li>
 
                     <li>
@@ -119,20 +131,13 @@
 
 <br>	    
 
-<div class="container">
-	<div class="row">
-	    <div class="col-md-12 text-center">
-	      <a style="font-size: 16px;"><b>∗ These authors contribute equally.</b></a>
-	    </div>
-	  </div>
-  </div>
-<br>
+
 
 	    
 <div class="container">
 	<div class="row">
 	    <div class="col-md-12 text-center">
-	      <a style="font-size: 16px;"><b>**This paper has been accepted at NeurIPS 2024 as an oral presentation.** </b></a>
+	      <a style="font-size: 16px;"><b>This paper has been accepted at NeurIPS 2024 as an oral presentation.** </b></a>
 	    </div>
 	  </div>
 	</div>
