--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
                     <a></a><br>
 			<li>
                         <sup>1</sup>
-                        <p style="font-size: 16px;">
+                        <a herf="https://www.polyu.edu.hk/" style="font-size: 16px;">
                             The Hong Kong Polytechnic University
-                        </p>
+                        </a>
                         </li>
 			<li>
                         <sup>2</sup>
-                        <p style="font-size: 16px;">
+                        <a herf="https://case.edu/" style="font-size: 16px;">
                             Case Western Reserve University 
-                        </p>
+                        </a>
 			</li>
 			<br>
 			<li>
@@ -234,7 +234,7 @@
                 </h2>
 		    
                 <hr style="margin-top:0px">
-                <p class="text-justify" style="font-family: 'Palatino', serif;">
+                <p class="text-justify" style="font-family: 'Palatino', serif; font-size: 16px;">
 <b>
 Recent advancements in large multimodal language models have demonstrated
 remarkable proficiency across a wide range of tasks. Yet, these models still
@@ -314,13 +314,14 @@ expressions. </b>
                     <b>Tasks </b>
                 </h2>
 		<hr style="margin-top:0px">
-                	<img src="./files/tasks2.jpg" style="width: 80%; height: 80%;"><br>
-		    <br>
-		    <br>
-		<p class="text-justify" style="font-size: 16px;">	
+		    <p class="text-justify" style="font-size: 16px;">	
                     <b>Do Large Models Understand Humor in Juxtaposition? </b> <br>
 		    We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
 		</p>
+		    <br>
+		    <br>
+                	<img src="./files/tasks2.jpg" style="width: 80%; height: 80%;"><br>
+
             </div>
 
 	<!--<div class="col-md-12 col-md-offset-0 text-center">
@@ -361,7 +362,8 @@ expressions. </b>
 		<p class="text-justify" style="font-size: 16px;">
 		<b>Evaluation: </b> As a benchmark, this dataset can be used to evaluate the reasoning ability, comic understanding and humor understanding ability of a Vision Language Model. The following result is the how we evaluate the humor understanding ability of VLMs in our paper.
 		</p>
-		<img src="./files/evaluation2.jpg" style="width: 80%; height: 80%;" ><br>
+		<img src="./files/evaluation2.jpg" style="width: 80%; height: 80%;" >
+		    <br>
 		    
             </div>
 		<br>
