--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ expressions. </b>
 		 <p class="text-justify" style="font-size: 16px;">
                     <b>Framework of Data Construction.</b> For each comic, we annotate the corresponding literal description, contradiction explanation, underlying philosophy and comic title. We primarily rely on human annotators to obtain gold-standard annotations. Our annotation process included two stages: the progressive human-AI collaborative annotation stage and the quality check and cross-verification stage. See in our figure.
 		</p>
+		<br>
                 <img src="./files/annotation_pipeline.png" class="img-responsive" alt="overview"><br>
                	<br>
 	<br>
@@ -310,7 +311,7 @@ expressions. </b>
 
 
             <div class="col-md-12 col-md-offset-0 text-center">
-                <br><br>
+                <br><br><br>
                 <h2>
                     <b>Tasks </b>
                 </h2>
@@ -319,9 +320,11 @@ expressions. </b>
                     <b>Do Large Models Understand Humor in Juxtaposition? </b> <br>
 		    We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
 		</p>
-
-                	<img src="./files/tasks2.jpg" style="width: 80%; height: 80%;"><br>
-
+		<br>
+                	<img src="./files/tasks2.jpg" style="width: 80%; height: 80%;">
+		    <br>
+		<br>
+		<br>
             </div>
 
 	<!--<div class="col-md-12 col-md-offset-0 text-center">
