--- a/index.html
+++ b/index.html
@@ -349,8 +349,16 @@ expressions. </b>
                 </h2>
 		    <hr style="margin-top:0px">
 		<p class="text-justify" style="font-size: 16px;">
+		<b>Evaluation: </b>As a benchmark, this dataset can be used to evaluate the reasoning ability, comic understanding and humor understanding ability of a Vision Language Model. The following result is the how we evaluate the humor understanding ability of VLMs in our paper.
+		</p>
+		<hr style="margin-top:0px">
+		<img src="./files/evaluation2.jpg" style="width: 80%; height: 80%;" >
+		<br>
+		<br>
+		<p class="text-justify" style="font-size: 16px;">
 		    <b>Generative task: </b>In the future, we intend to explore more deeply how AI can creatively engage with content. This includes generating pivotal turning points from one perspective and creating counterpoints to given scenarios, like generating a "But" image by given "Yes". The following is a simple example of it.
 		</p>
+		<hr style="margin-top:0px">
                 <img src="./files/4.jpg" style="width: 50%; height: 50%;" ><br>
 		<img src="./files/5.jpg" style="width: 40%; height: 60%;" ><br>
 		</p>
@@ -359,14 +367,11 @@ expressions. </b>
 		<p class="text-justify" style="font-size: 16px;">
 		<b>VLM image understanding: </b>VLM Image Understanding: We will explore in more depth how VLM understands these images and how to improve VLM’s ability to understand these humorous images. We can address the hallucinations in the samples by improving the model’s reasoning ability and improve VLM’s understanding of the deep semantics of the images.
 		</p>
+		    <hr style="margin-top:0px">
 		    <img src="./files/understand.jpg" style="width: 80%; height: 80%;" ><br>
 		<br>
 		<br>
-		<p class="text-justify" style="font-size: 16px;">
-		<b>Evaluation: </b> As a benchmark, this dataset can be used to evaluate the reasoning ability, comic understanding and humor understanding ability of a Vision Language Model. The following result is the how we evaluate the humor understanding ability of VLMs in our paper.
-		</p>
-		<img src="./files/evaluation2.jpg" style="width: 80%; height: 80%;" >
-		    <br>
+		<br>
 		    
             </div>
 		<br>
